<resources>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2500316826660076</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2500316826660076</string>

    <string name="facebook_app_id">2500316826660076</string>
    <string name="fb_login_protocol_scheme">fb2500316826660076</string>

    <string name="app_name">Road Trip</string>
    <string name="login">Login</string>
    <string name="bookTrip">Book A Trip</string>
    <string name="leavingFrom">Leaving From:</string>
    <string name="goingTo">Going To:</string>
    <string name="departureDate">Departure Date:</string>
    <string name="search">Search</string>
    <string name="busType">Bus Type:</string>
    <string name="duration">Duration:</string>
    <string name="departure">Departure:</string>
    <string name="arrival">Arrival:</string>
    <string name="farePerPerson">Fare Per Person:</string>
    <string name="chooseSeats">Choose Seats For This Bus</string>
    <string name="transferBus1">Transfer Bus One</string>
    <string name="transferBus2">Transfer Bus Two</string>
    <string name="transferChooseSeats">Choose Seats For These Buses</string>
    <string name="ok">Ok</string>
    <string name="bookSeats">Book Seats</string>
    <string name="bookSeatsTransfer">Book and Choose Seats For Next Bus</string>
    <string name="chooseSeatDesc">
        Click on the seats that you want to reserve then click the button below to reserve them.
    </string>
    <string name="seatAvailable">Available\nSeat</string>
    <string name="seatUnavailable">Unavailable\nSeat</string>
    <string name="seatSelected">Selected\nSeat</string>
    <string name="passengerDetails">PASSENGER DETAILS</string>
    <string name="fname">First Name (Required)</string>
    <string name="lname">Last Name (Required)</string>
    <string name="dob">Date of Birth (Required)</string>
    <string name="pay">Pay</string>
    <string name="paymentDetails">PAYMENT DETAILS</string>
    <string name="passengerNum">Number of Passengers</string>
    <string name="pricePerPerson">Fare Per Person</string>
    <string name="total">Your Total</string>
    <string name="confirmPayment">CONFIRM PAYMENT</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="viewGame">View Game Schedule</string>
    <string name="coupon">Apply Coupon</string>

    <!--ProgressDialog-->
    <string name="loadingDataTitle">
        Loading Data
    </string>
    <string name="loadingDataMessage">
        Loading data from the server. Please wait…
    </string>

    <!--AlertDialog-->
    <string name="loginUnsuccessfulTitle">
        Login Unsuccessful
    </string>
    <string name="loginUnsuccessfulMessage">
        Login Unsuccessful. Please try again.
    </string>
    <string name="cannotLoadDataTitle">
        Failed To Load
    </string>
    <string name="cannotLoadDataMessage">
        Failed to load data from the server. Please try again later…
    </string>
    <string name="sameCityTitle">
        Same City
    </string>
    <string name="sameCityMessage">
        You are already at your destination. Please choose a different city.
    </string>
    <string name="transferTitle">
        No Direct Route Available
    </string>
    <string name="transferMessage">
        There is no direct route available for the cities you chose. Would you consider one with a transfer instead?
    </string>
    <string name="bookThis">Book This</string>
    <string name="title_activity_maps">Map</string>
</resources>
