<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.booking.BookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolbar"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/border"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/leavingFrom"/>
                <Spinner
                    android:id="@+id/sp_cityFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/border"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goingTo"/>
                <Spinner
                    android:id="@+id/sp_cityGoingTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/border"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departureDate"/>
                <CalendarView
                    android:id="@+id/cv_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Button
                android:id="@+id/bt_bookingSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/background_button"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/search"/>
        </LinearLayout>

    </RelativeLayout>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

</RelativeLayout>